[package]
name = "gqg"
version = "1.0.0"
authors = ["gqg Authors"]
description = "Minimalistic file and message encryption"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gqg-enc.github.io/"
repository = "https://github.com/gqg-enc/gqg-cli"

[dependencies]
gqg-lib = { git = "https://github.com/gqg-enc/gqg-lib" }
#gqg-lib = { path = "../gqg-lib" }
sodiumoxide = "0.2.6"
anyhow = "1.0.38"
dirs = "3.0.1"
chrono = "0.4.19"
ansi_term = "0.12.1"
